<resources>
    <string name="app_name">Duva</string>
    <string name="app_description">Featherlight safety messaging platform</string>
    <string name="title_home">Home</string>
    <string name="title_zones">Zones</string>
    <string name="title_settings">Settings</string>
    <string name="notification_channel">duva_notification</string>
    <string name="notification_description">Notification channel for Duva - Android client</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="txt_desc_username">Logged in as:</string>
    <string name="txt_username">not logged in</string>
    <string name="txt_desc_currentZone">Current zone:</string>
    <string name="txt_currentZone">no zone detected</string>
    <string name="txt_debug">Text view for debugging purposes</string>
    <string name="btn_forceFCMSubscribe">Manually check in to zone</string>
    <string name="btn_sync">Reload all data from server</string>
    <string name="btn_desc_larmRecord">Larm record button</string>
    <string name="switch_toggleLarmButtons">Enable alarms for current zone:</string>
    <string name="dialog_larm_title">Confirm enable alarm buttons</string>
    <string name="dialog_larm_message">Are you sure you want to enable alarm buttons? Sending an alarm may override recipients sound settings. Use with caution.</string>
    <string name="toast_alarmSent">Alarm sent successfully</string>
    <string name="toast_forceFCMSubscribeSuccess">Successfully subscribed to: </string>
    <string name="toast_forceFCMSubscribeFailure">Failed subscribing to: </string>
    <string name="permission_button_ok">OK</string>
    <string name="permission_title">Permission required</string>
    <string name="permission_location_message">Permission to access location is required for this app</string>
    <string name="permission_ACCESS_FINE_LOCATION">Permission to access location is required</string>
    <string name="permission_WRITE_EXTERNAL_STORAGE">Permission to write to shared storage is required</string>
    <string name="permission_RECORD_AUDIO">Permission to record audio is required</string>
    <string name="alert_geofences">Failed to add a list of geofences to the Android system. Try increasing your phones location accuracy and restart the app.</string>

    <string name="map_desc_radius">Radius</string>

    <string name="btn_signinAnonymous">Sign in (no e-mail required)</string>
    <string name="btn_signinMicrosoft">Sign in (Microsoft)</string>
    <string name="btn_signin">Sign in (Google or e-mail)</string>
    <string name="btn_signout">Sign out</string>

    <string name="toast_notLoggedIn">Login to access settings</string>
    <string name="toast_updateZoneSuccess">Settings updated</string>
    <string name="toast_updateZoneFailed">Failed to update settings</string>

    <string name="btn_subscribeZone">Subscribe to updates</string>
    <string name="btn_unsubscribeZone">Remove zone</string>
    <string name="btn_updateSettings">Update settings</string>
    <string name="txt_clickedZone">Click on zone circle in map for settings</string>
    <string name="switch_permission_larm_preset">Permission: larm w/ preset</string>
    <string name="switch_permission_larm_soundRecording">Permission: larm w/ audio</string>
    <string name="switch_permission_larm_video">Permission: larm w/ video</string>
    <string name="switch_setting_notice">Setting: notice on alarm</string>
    <string name="switch_setting_override_sound">Setting: alarms overrides sound</string>
</resources>
