<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="false"
        android:layout_alignParentTop="false"
        tools:context=".HomeFragment"
        android:orientation="vertical">

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal">

        <ImageView
                android:src="@mipmap/ic_duva_icon"
                android:layout_width="67dp"
                android:layout_height="72dp"
                android:id="@+id/img_duvaIcon"/>

        <TextView
                android:text="@string/app_name"
                android:layout_width="93dp"
                android:layout_height="wrap_content"
                android:id="@+id/txt_appName"
                android:textSize="30sp"
                android:textStyle="bold"
                android:layout_gravity="center_vertical"/>
    </LinearLayout>

    <TextView
            android:text="@string/app_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txt_appDescription"
            android:textStyle="italic"
            android:layout_gravity="center_horizontal"/>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txt_desc_username"
                android:text="@string/txt_desc_username"
                android:textStyle="bold"
                android:layout_marginStart="80dp"/>

        <TextView
                android:text="@string/txt_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txt_username"
                android:layout_marginStart="5dp"/>

    </LinearLayout>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

        <TextView
                android:text="@string/txt_desc_currentZone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txt_desc_currentZone"
                android:textStyle="bold"
                android:layout_marginStart="80dp"/>

        <TextView
                android:text="@string/txt_currentZone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txt_currentZone"
                android:layout_marginStart="5dp"/>

    </LinearLayout>

    <TextView
        android:id="@+id/txt_debug"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="10dp"
        android:text="@string/txt_debug" />

    <Switch
            android:text="@string/switch_toggleLarmButtons"
            android:layout_width="wrap_content"
            android:id="@+id/switch_toggleLarmButtons"
            android:layout_marginTop="30dp"
            android:layout_gravity="center_horizontal"
            android:layout_height="30dp"
            android:switchPadding="10dp"/>

    <ProgressBar
            style="@android:style/Widget.ProgressBar.Horizontal"
            android:layout_width="291dp"
            android:layout_height="wrap_content"
            android:id="@+id/bar_progressSoundRecording"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"/>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal">

        <ImageButton
                android:src="@drawable/btn_record"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:id="@+id/btn_larmRecord"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:scaleType="fitCenter"
                android:contentDescription="@string/btn_desc_larmRecord"
                />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_forceFCMSubscribe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="50dp"
            android:background="#F5F2F2"
            android:drawableStart="@android:drawable/btn_star_big_on"
            android:paddingStart="25dp"
            android:paddingEnd="25dp"
            android:text="@string/btn_forceFCMSubscribe" />

        <Button
            android:id="@+id/btn_sync"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="50dp"
            android:background="#F5F2F2"
            android:drawableStart="@android:drawable/ic_menu_rotate"
            android:paddingStart="25dp"
            android:paddingEnd="25dp"
            android:text="@string/btn_sync" />
    </LinearLayout>

</LinearLayout>