<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ZonesFragment">



    <fragment
            android:id="@+id/map"
            android:layout_width="wrap_content"
            android:layout_height="300dp"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="false"
            android:layout_alignParentTop="true" />

    <CheckBox
            android:text="@string/switch_permission_larm_preset"
            android:layout_width="333dp"
            android:layout_height="wrap_content"
            android:id="@+id/switch_larmPreset"
            android:layout_marginTop="5dp"
            android:layout_below="@+id/switch_settingNotice"
            android:layout_alignStart="@+id/txt_clickedZone"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="30dp"
            android:textStyle="italic"
            android:splitTrack="false"
            android:scrollbarAlwaysDrawHorizontalTrack="false"
            android:layoutDirection="rtl"
            android:alpha="0.5"
            android:showText="false"
            android:elegantTextHeight="false"
            android:background="@android:color/darker_gray"/>

    <Switch
            android:text="@string/switch_setting_notice"
            android:layout_width="333dp"
            android:layout_height="wrap_content"
            android:id="@+id/switch_settingNotice"
            android:layout_marginStart="-1dp"
            android:layout_alignStart="@+id/txt_clickedZone"
            android:layout_marginTop="0dp"
            android:layout_below="@+id/switch_settingOverrideSound"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="30dp"/>

    <Switch
            android:text="@string/switch_setting_override_sound"
            android:layout_width="333dp"
            android:layout_height="wrap_content"
            android:id="@+id/switch_settingOverrideSound"
            android:layout_marginTop="5dp"
            android:layout_below="@+id/txt_clickedZone"
            android:layout_marginStart="0dp"
            android:layout_alignStart="@+id/txt_clickedZone"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="30dp"/>

    <CheckBox
            android:text="@string/switch_permission_larm_soundRecording"
            android:layout_width="333dp"
            android:layout_height="wrap_content"
            android:id="@+id/switch_larmSoundRecording"
            android:layout_below="@+id/switch_larmPreset"
            android:layout_alignStart="@+id/txt_clickedZone"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="30dp"
            android:textStyle="italic"
            android:layoutDirection="rtl"
            android:alpha=".5"
            android:background="@android:color/darker_gray"/>

    <CheckBox
            android:text="@string/switch_permission_larm_video"
            android:layout_width="333dp"
            android:layout_height="wrap_content"
            android:id="@+id/switch_larmVideo"
            android:layout_alignStart="@+id/txt_clickedZone"
            android:layout_below="@+id/switch_larmSoundRecording"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="30dp"
            android:layoutDirection="rtl"
            android:textStyle="italic"
            android:alpha=".5"
            android:background="@android:color/darker_gray"/>

    <TextView
            android:text="@string/txt_clickedZone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txt_clickedZone"
            android:layout_marginStart="20dp"
            android:layout_marginTop="9dp"
            android:layout_below="@+id/map"
            android:textSize="18sp"
            android:layout_alignParentStart="true"
            android:textStyle="bold"/>

    <Button
        android:id="@+id/btn_subscribeZone"
        android:layout_width="124dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/switch_larmVideo"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="271dp"
        android:background="#CCB89A"
        android:requiresFadingEdge="none"
        android:text="@string/btn_subscribeZone" />

    <Button
        android:id="@+id/btn_unsubscribeZone"
        android:layout_width="124dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/switch_larmVideo"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="271dp"
        android:background="#CCB89A"
        android:requiresFadingEdge="none"
        android:text="@string/btn_unsubscribeZone" />

    <Button
            android:text="@string/btn_updateSettings"
            android:layout_width="204dp"
            android:layout_height="wrap_content"
            android:id="@+id/btn_updateSettings"
            android:layout_marginTop="5dp"
            android:layout_below="@+id/switch_larmVideo"
            android:background="@color/fui_bgPhone"
            android:requiresFadingEdge="none"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="30dp"/>
</RelativeLayout>