<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SettingsFragment"
        android:orientation="vertical"
        android:gravity="center_vertical">

    <Button
        android:id="@+id/btn_signInAnonymous"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:background="#F5F2F2"
        android:drawableStart="@android:drawable/ic_input_add"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:text="@string/btn_signinAnonymous"
        android:textColor="#000000" />

    <Button
        android:id="@+id/btn_signIn"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:background="#F5F2F2"
        android:drawableStart="@drawable/googleg_standard_color_18"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:text="@string/btn_signin"
        android:textColor="#000000" />

    <Button
        android:id="@+id/btn_signInMicrosoft"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:background="#F5F2F2"
        android:drawableStart="@drawable/microsoft_login_foreground"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:text="@string/btn_signinMicrosoft"
        android:textColor="#000000" />

    <Button
        android:id="@+id/btn_signout"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:background="#F5F2F2"
        android:drawableStart="@android:drawable/ic_delete"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:text="@string/btn_signout" />/>
</LinearLayout>